--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<meta http-equiv="Pragma" content="no-cache">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="a/all.css" tppabs="a/all.min.css">
+	<link rel="icon" href="images/logo.ico" type="image/x-icon">
 
 </head>
 <body class="ft-absolute-nav">
