--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
 <!--[if !(IE)]><!-->
 <html><!--<![endif]--><head>
 <title>love 520 送你的一封情书</title>
+<script type="text/javascript">
+            var msg = document.title;
+            msg = "…" + msg;pos = 0;
+            function scrollMSG() {
+                document.title = msg.substring(pos, msg.length) + msg.substring(0, pos);
+                pos++;
+                if (pos >  msg.length) pos = 0
+                window.setTimeout("scrollMSG()",400);
+            }
+            scrollMSG();
+</script>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta http-equiv="Pragma" content="no-cache">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -320,5 +331,5 @@
 		</script><span id="cnzz_stat_icon_5796950"><a href="http://www.cnzz.com/stat/website.php?web_id=5796950" target="_blank" title="站长统计"><img src="a/pic1.gif" border="0" hspace="0" vspace="0"></a></span><script src="a/stat.php" type="text/javascript"></script><script src="a/core.php" charset="utf-8" type="text/javascript"></script> 
 	</div>
 
-
-</body></html>
+</body>
+</html>
