文章内容修改第text-22

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ newtext();
 		</div>
 		<div id="" data-prog="__2" class="ft-section section-2" data-id="__section-2">
 			<div data-prog="__1" id="" class="ft-page page-5 full-img future-section" data-id="__page-1">
-				<h2 class="center-text" id="text-4" contenteditable="true">一个人的地铁</h2>
+				<h2 class="center-text" id="text-4" contenteditable="true">一个人的火车</h2>
 				<img src="a/iali19.jpg" alt="一个人的地铁">
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-6 future-section future-page" data-id="__page-2">
@@ -101,7 +101,9 @@ newtext();
 				<img src="a/iali45.jpg">
 			</div>
 			<div data-prog="__6" id="" class="ft-page page-16 left-img future-section future-page" data-id="__page-6">
-				<h3><span id="text-17" contenteditable="true">于是，他一个人继续向前走</span><br><span id="text-18" contenteditable="true">走在茫茫的雪地上</span></h3>
+				<h3><span id="text-17" contenteditable="true">于是，他一个人继续向前走</span>
+				<br>
+				<span id="text-18" contenteditable="true">走在茫茫的人生道路上</span></h3>
 				<img src="a/iali66.jpg">
 			</div>
 			<div data-prog="__7" id="" class="ft-page page-17 top-text future-section future-page" data-id="__page-7">
@@ -111,16 +113,18 @@ newtext();
 		</div>
 		<div id="" data-prog="__4" class="ft-section section-4" data-id="__section-4">
 			<div data-prog="__1" id="" class="ft-page page-18 full-img future-section" data-id="__page-1">
-				<p class="text" id="text-20" contenteditable="true">他喜欢大，因为她的出现，他脸上有了更加灿烂的笑容</p>
+				<p class="text" id="text-20" contenteditable="true">她说: 她喜欢你，因为她的出现，他脸上有了更加灿烂的笑容</p>
 				<img src="a/iali11.jpg">
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-19 future-section future-page" data-id="__page-2">
-				<h3 id="text-21" contenteditable="true">可是她会喜欢他吗？</h3>
+				<h3 id="text-21" contenteditable="true">可是他很笨很呆，她会一直喜欢下去吗？</h3>
 				<img src="a/iali75.jpg">
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-20 future-section future-page" data-id="__page-3">
 				<img src="a/iali59.png" tppabs="http://kingzs70.oss.aliyuncs.com/iali/img/iali59.png">
-				<h3 id="text-22" contenteditable="true">终于有一天，他鼓起了勇气</h3>
+				<h3><span id="text-22" contenteditable="true">终于有一天，他鼓起了信心</span>
+				<br><span id="text-22" contenteditable="true">有信心让未来变得美好，他给了她一个浪漫的烛光表白仪式！</span>
+				</h3>
 				<img src="a/iali9.jpg">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-21 future-section future-page" data-id="__page-4">
