文章内容修改第text-22

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ newtext();
 		<div id="" data-prog="__2" class="ft-section section-2" data-id="__section-2">
 			<div data-prog="__1" id="" class="ft-page page-5 full-img future-section" data-id="__page-1">
 				<h2 class="center-text" id="text-4" contenteditable="true">一个人的火车</h2>
-				<img src="a/iali19.jpg" alt="一个人的地铁">
+				<img src="a/iali19.jpg" alt="一个人的火车">
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-6 future-section future-page" data-id="__page-2">
 				<h2 class="center-text" id="text-5" contenteditable="true">一个人的游乐场</h2>
