文章内容修改第text-22

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ newtext();
 				<img src="a/iali59_002.png">
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-22 left-img future-section future-page" data-id="__page-5">
-				<h3 id="text-24" contenteditable="true">每天他都会去找她</h3>
+				<h3 id="text-24" contenteditable="true">每天他都想要去找她</h3>
 				<img src="a/iali4.jpg">
 			</div>
 			<div data-prog="__6" id="" class="ft-page page-23 left-img future-section future-page" data-id="__page-6">
@@ -140,13 +140,13 @@ newtext();
 				<img src="a/iali44.jpg">
 			</div>
 			<div data-prog="__7" id="" class="ft-page page-24 full-img future-section future-page" data-id="__page-7">	
-				<h3 id="text-26" contenteditable="true">晚上他会把她送回家</h3>
+				<h3 id="text-26" contenteditable="true">晚上他会把她送回去</h3>
 				<img src="a/iali32.jpg">
 			</div>
 		</div>
 		<div id="" data-prog="__5" class="ft-section section-5" data-id="__section-5">
 			<div data-prog="__1" id="" class="ft-page page-25 left-img future-section" data-id="__page-1">
-				<h3><span id="text-27" contenteditable="true">直到很晚</span><br><span id="text-28" contenteditable="true">他才会一个人回家</span></h3>
+				<h3><span id="text-27" contenteditable="true">直到很晚</span><br><span id="text-28" contenteditable="true">他才会一个人回去</span></h3>
 				<img src="a/iali37.jpg">
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-26 top-text future-section future-page" data-id="__page-2">
@@ -154,7 +154,7 @@ newtext();
 				<img src="a/iali10.gif">
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-27 future-section future-page" data-id="__page-3">
-				<h3 id="text-30" contenteditable="true">他很快就成为了她的逛街助手</h3>
+				<h3 id="text-30" contenteditable="true">他很快就成为了她的万能小助手</h3>
 				<img src="a/iali67.jpg">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-28 future-section future-page" data-id="__page-4">
@@ -166,7 +166,7 @@ newtext();
 				<img src="a/iali12.jpg">
 			</div>
 			<div data-prog="__6" id="" class="ft-page page-30 future-section future-page" data-id="__page-6">
-				<h3 id="text-33" contenteditable="true">后来，他们搬到了一起</h3>
+				<h3 id="text-33" contenteditable="true">他希望，以后他们能搬到一起</h3>
 				<img src="a/iali76.gif">
 			</div>
 			<div data-prog="__7" id="" class="ft-page page-31 future-section future-page" data-id="__page-7">
@@ -180,11 +180,12 @@ newtext();
 				<img src="a/iali62.jpg">
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-33 top-text future-section future-page" data-id="__page-2">
-				<h3 id="text-36" contenteditable="true">每天早上，他们吃着自己做的美食</h3>
+				<h3 id="text-36" contenteditable="true">想着每天早上，她吃着自己做的美食</h3>
 				<img src="a/iali3.jpg">
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-34 left-img future-section future-page" data-id="__page-3">
-				<h3 id="text-37" contenteditable="true">然后在同一个站台，高高兴兴的一起上班</h3>
+				<h3 id="text-37" contenteditable="true">然后在同一个城市，高高兴兴的一起上班</h3>
+				<img src="a/iali81.jpg">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-35 future-section future-page" data-id="__page-4">
 				<h3><span id="text-38" contenteditable="true">他感觉自己好幸福。</span><br><span id="text-39" contenteditable="true">因为自己有了家</span><br><span id="text-40" contenteditable="true">那个有她在的地方</span></h3>
