文章内容修改第text-22

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ newtext();
 				<h3 id="text-36" contenteditable="true">想着每天早上，她吃着自己做的美食</h3>
 				<img src="a/iali3.jpg">
 			</div>
-			<div data-prog="__3" id="" class="ft-page page-34 left-img future-section future-page" data-id="__page-3">
+			<div data-prog="__3" id="" class="ft-page page-34 future-section future-page" data-id="__page-3">
 				<h3 id="text-37" contenteditable="true">然后在同一个城市，高高兴兴的一起上班</h3>
 				<img src="a/iali81.jpg">
 			</div>
