--- a/index.html
+++ b/index.html
@@ -188,7 +188,9 @@ newtext();
 				<img src="a/iali88.png">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-35 future-section future-page" data-id="__page-4">
-				<h3><span id="text-38" contenteditable="true">他感觉自己好幸福。</span><br><span id="text-39" contenteditable="true">因为自己有了家</span><br><span id="text-40" contenteditable="true">那个有她在的地方</span></h3>
+				<h3><span id="text-38" contenteditable="true">他感觉自己好幸福。
+				</span><br><span id="text-39" contenteditable="true">她说会陪他在一个家</span>
+				<br><span id="text-40" contenteditable="true">那个有她在的地方</span></h3>
 				<img src="a/iali8.gif">
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-36 full-img future-section future-page" data-id="__page-5">
@@ -219,12 +221,13 @@ newtext();
 				<h3 id="text-46" contenteditable="true"> 他又怎会飞的更高更远</h3>
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-42 future-section future-page" data-id="__page-4">
-				<h3><span id="text-47" contenteditable="true">他不想这样。他要为她改变自己</span><br><span id="text-48" contenteditable="true">她说她喜欢狮子座的人，于是他许下愿望</span></h3>
+				<h3><span id="text-47" contenteditable="true">他不想这样。他要为她改变自己</span><br>
+				<span 	id="text-48" contenteditable="true">她说她不喜欢我这样，那样，于是他强忍的用各种方法去努力</span></h3>
 				<img src="a/iali69.jpg">
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-43 future-section future-page" data-id="__page-5">
 				<img src="a/iali42.jpg">
-				<h3 id="text-49" contenteditable="true">我愿为你变成狮子座</h3>
+				<h3 id="text-49" contenteditable="true">我愿为你做出改变</h3>
 			</div>
 			<div data-prog="__6" id="" class="ft-page page-44 left-img future-section future-page" data-id="__page-6">
 				<h3><span id="text-50" contenteditable="true">爱情就像花草一样</span><br><span id="text-51" contenteditable="true">需要用包容来浇灌</span></h3>
@@ -259,14 +262,14 @@ newtext();
 				<img src="a/iali65.jpg">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-49 full-img future-section future-page" data-id="__page-4">
-			<img src="a/iali71.jpg">
-				<p class="text">
-					<span class="text" id="text-64" contenteditable="true">他很幸福，因为他找到了她。他相信后面的每天都会是快乐的</span><br>
-					<span class="text" id="text-65" contenteditable="true">简简单单，体会着与她在一起的每一个刻</span>
+			<p class="text">
+					<span id="text-64" contenteditable="true">他很幸福，因为他找到了她。他相信后面的每天都会是快乐的</span><br>
+					<span id="text-65" contenteditable="true">简简单单，体会着与她在一起的每一个刻</span>
 				</p>
+			<img src="a/iali71.jpg">
 			</div>
 			<div data-prog="__5" id="" class="ft-page page-50 future-section future-page" data-id="__page-5">
-				<p class="text" id="text-66" contenteditable="true">后来的一天，她说她不敢坐山车了，于是他就带她到别的地方玩。这只是他们幸福生活中的一件小事，小到无法引起别人的注意。可这是属于他和她的幸福生活。带她到别的地方玩。这只是他们幸福生活中的一件小事，小到无法引起别人的注意。可这是属于他和她的幸福生活。</p>
+				<p class="text" id="text-66" contenteditable="true">后来的一天，她说她不敢坐荡秋千了，于是他就带她到别的地方，去游泳，去划船。。。这只是他们幸福生活中的一件小事，小到无法引起别人的注意。可这是属于他和她的幸福生活。带她到别的地方玩。这只是他们幸福生活中的一件小事，小到无法引起别人的注意。可这是属于他和她的幸福生活。</p>
 				<img src="a/iali50_1.jpg" class="img1">
 				<img src="a/iali50_2.jpg" class="img2">
 			</div>
@@ -277,6 +280,7 @@ newtext();
 					<span id="text-69" contenteditable="true">她：世界有多大？</span><br>
 					<span id="text-70" contenteditable="true">他：你走到哪里，世界就有多大</span>
 					</p>
+				<img src="a/iali78.jpg">	
 			</div>
 		</div>
 		<div id="" data-prog="__9" class="ft-section section-9" data-id="__section-9">
@@ -286,11 +290,11 @@ newtext();
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-53 future-section future-page" data-id="__page-2">
 				<img src="a/iali68.jpg" alt="happy birthday">
-				<h6 id="text-72" contenteditable="true">莲莲</h6>
-				<h3 id="text-72" contenteditable="true">520快乐</h3>
+				<h6 id="text-72" contenteditable="true">徐雪姣</h6>
+				<h3 id="text-72" contenteditable="true">情人节快乐</h3>
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-54 center-img future-section future-page" data-id="__page-3">
-				<div class="center-img">I love you</div>
+					<div class="center-img">I love you</div>
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-55 right-img future-section future-page" data-id="__page-4">
 				<img src="a/14915.jpg">
