--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ newtext();
 				<img src="a/iali3.jpg">
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-34 future-section future-page" data-id="__page-3">
-				<h3 id="text-37" contenteditable="true">然后在同一个城市，高高兴兴的一起上班</h3>
+				<h3 id="text-37" contenteditable="true">然后在同一个城市，高高兴兴的一起上班.</h3>
 				<img src="a/iali88.png">
 			</div>
 			<div data-prog="__4" id="" class="ft-page page-35 future-section future-page" data-id="__page-4">
