--- a/index.html
+++ b/index.html
@@ -183,12 +183,8 @@ newtext();
 				<h3 id="text-36" contenteditable="true">想着每天早上，她吃着自己做的美食</h3>
 				<img src="a/iali3.jpg">
 			</div>
-			<div data-prog="__3" id="" class="ft-page page-34 future-section future-page" data-id="__page-3">
-				<h3 id="text-37" contenteditable="true">然后在同一个城市，高高兴兴的一起上班.</h3>
-				<img src="a/iali88.png">
-			</div>
-			<div data-prog="__4" id="" class="ft-page page-35 future-section future-page" data-id="__page-4">
-				<h3><span id="text-38" contenteditable="true">他感觉自己好幸福。
+<div data-prog="__4" id="" class="ft-page page-35 future-section future-page" data-id="__page-4">
+		<h3><span id="text-38" contenteditable="true">他感觉自己好幸福。
 				</span><br><span id="text-39" contenteditable="true">她说会陪他在一个家</span>
 				<br><span id="text-40" contenteditable="true">那个有她在的地方</span></h3>
 				<img src="a/iali8.gif">
@@ -294,19 +290,25 @@ newtext();
 				<h3 id="text-72" contenteditable="true">情人节快乐</h3>
 			</div>
 			<div data-prog="__3" id="" class="ft-page page-54 center-img future-section future-page" data-id="__page-3">
-					<div class="center-img">I love you</div>
-					
+					<div class="center-img"><span id="text-70" contenteditable="true" size= 100px >I LOVE YOU </spen>
+					</div>
+
 			</div>
-			<div data-prog="__4" id="" class="ft-page page-55 right-img future-section future-page" data-id="__page-4">
-				<img src="a/14915.jpg">
-				<p class="text">
+		  <div data-prog="__4" id="" class="ft-page page-55 right-img future-section future-page" data-id="__page-4">
+			  
+				<span class="text"><a href ="windows/index.html"><img src="img/logo.png" width=100px
+	height=0px/></a></span><img src="a/14915.jpg">
+			<p class="text">
 					<span id="text-73" contenteditable="true">他和她的故事会一直继续下去。</span><br>
-					<span id="text-74" contenteditable="true">无论精彩、平淡都会是他们喜欢的。</span><br>
+					<span id="text-74" contenteditable="true">无论精彩、平淡都会是他们喜欢的。</span>点击左上角的图标打开我为你准备的新世界！！！<br>
 					<br>
 					<br>
-					<a href = "http://192.168.100.135/LoveSourceCode/%e8%a1%a8%e7%99%bd%e7%bd%91%e9%a1%b5%e6%ac%be%e5%bc%8f%e5%8d%81%e4%b8%80%e6%ba%90%e7%a0%81/#!/" style="padding-left:20px;background:url('图片地址') left top">腾讯网</a>
-				</p>				
-			</div>
+				<br>
+					<br>
+		    </p>
+		  </div>
+			
+			
 		</div>
 	</div>
 	<noscript><div class="nojavascript">您的浏览器禁用了javascript，无法正常浏览本页面</div></noscript>
