--- a/windows/index.html
+++ b/windows/index.html
@@ -231,12 +231,12 @@ oncut="return false;" >
 							<h2>絮叨絮叨</h2>
                             <div class="relative">
                                 <div class="scroll">
-                                    <div style="width:100%;float: left; border-bottom: 1px solid #CCCCCC;">雪姣<br/><span style="float: right"> --by </span></div>
+                                    <div style="width:100%;float: left; border-bottom: 1px solid #CCCCCC;">雪姣<br/><span style="float: right"> --by 傻龙 </span></div>
 
 
 
-                                    <div style="width:100%;float: left">你是我的，这句话我会经常唠叨的<br/><span style="float: right"> --by </span>
-									<div style="width:100%;float: left">还有我爱你这事<br/><span style="float: right"> --by </span>
+                                    <div style="width:100%;float: left">你是我的，这句话我会经常唠叨的<br/><span style="float: right"> --by 傻龙</span>
+									<div style="width:100%;float: left">还有我爱你这事<br/><span style="float: right"> --by 傻龙</span>
 									</div>
                                 </div>
                             </div>
@@ -252,7 +252,10 @@ oncut="return false;" >
 
                                     <div style="min-height: 300px; padding-bottom: 50px;">
 <!-- 多说评论框 start -->
-	<div class="ds-thread" data-thread-key="yyu" data-title="bb" data-url="http://"></div>
+	<div class="ds-thread" data-thread-key="yyu" data-title="bb" data-url="http://">
+		<div style="width:100%;float: left">祝福我们永远都能互相喜欢，跨越各种难题~~~<br/><span style="float: right"> --by  傻龙</span>
+									
+	</div>
 <!-- 多说评论框 end -->
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript"> var duoshuoQuery = {short_name:"love90"}; (function() { var ds = document.createElement('script'); ds.type = 'text/javascript';ds.async = true; ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '/static.duoshuo.com/embed.js'; ds.charset = 'UTF-8'; (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ds); })(); </script>
@@ -296,7 +299,7 @@ oncut="return false;" >
                                 <img src="images/1.gif" />　　　　<img src="images/2.gif" /><br/><br/>
                                     <div id="loveu">
                                         爱：从2018-10-4开始有了萌芽！<br/>
-                                        <div class="signature" style="float: right; margin-right: 50px;">by 雪姣 </div>
+                                        <div class="signature" style="float: right; margin-right: 50px;">by 傻龙 </div>
                                     </div>
                           </div>
                       </div>
@@ -340,9 +343,9 @@ $(window).load(function() {
     var offsetX = $("#loveHeart").width() / 2;
     var offsetY = $("#loveHeart").height() / 2 - 55;
     var together = new Date();
-    together.setFullYear(2018, 10, 04);
-    together.setHours(17);
-    together.setMinutes(0);
+    together.setFullYear(2018, 09, 04);
+    together.setHours(19);
+    together.setMinutes(23);
     together.setSeconds(0);
     together.setMilliseconds(0);
 
