--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ newtext();
 				<img src="a/iali20.jpg">
 			</div>
 			<div data-prog="__2" id="" class="ft-page page-53 future-section future-page" data-id="__page-2">
-				<img src="a/iali68.jpg" alt="happy birthday">
+				<img src="a/iali68.jpg" alt="happy">
 				<h6 id="text-72" contenteditable="true">徐雪姣</h6>
 				<h3 id="text-72" contenteditable="true">情人节快乐</h3>
 			</div>
@@ -295,17 +295,18 @@ newtext();
 
 			</div>
 		  <div data-prog="__4" id="" class="ft-page page-55 right-img future-section future-page" data-id="__page-4">
-			  
-				<span class="text"><a href ="windows/index.html"><img src="img/logo.png" width=100px
-	height=0px/></a></span><img src="a/14915.jpg">
+			<img src="a/14915.jpg" class = "img1">
 			<p class="text">
 					<span id="text-73" contenteditable="true">他和她的故事会一直继续下去。</span><br>
-					<span id="text-74" contenteditable="true">无论精彩、平淡都会是他们喜欢的。</span>点击左上角的图标打开我为你准备的新世界！！！<br>
+					<span id="text-74" contenteditable="true">无论精彩、平淡都会是他们喜欢的。</span>
+					<span id="text-74" contenteditable="true">点击下边的图标打开我为你准备的新世界！！！</span>
 					<br>
 					<br>
-				<br>
 					<br>
+					<a href ="windows/index.html"><img src="img/logo.png" width=100px
+	height=100px/></a>
 		    </p>
+			
 		  </div>
 			
 			
@@ -320,8 +321,7 @@ newtext();
 			<p id="write-url"></p>
 			<small><a href="###" id="back" style="display:none;">重新修改</a></small> <button id="write-post">❤ 生成表白页面</button>
 			<div class="write-share">
-				<p>~\(≧▽≦)/~ 点击分享 发送给你的亲亲吧</p>
-				<div class="bdsharebuttonbox"><a href="#" class="bds_qzone" data-cmd="qzone" title="分享到QQ空间"></a><a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a><a href="#" class="bds_tqq" data-cmd="tqq" title="分享到腾讯微博"></a><a href="#" class="bds_renren" data-cmd="renren" title="分享到人人网"></a><a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a><a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ好友"></a><a href="#" class="bds_tieba" data-cmd="tieba" title="分享到百度贴吧"></a><a href="#" class="bds_copy" data-cmd="copy" title="分享到复制网址"></a><a href="#" class="bds_more" data-cmd="more"></a></div>
+				<div class="bdsharebuttonbox"></div>
 			</div>
 		</div>
 	</div>
