--- a/windows/index.html
+++ b/windows/index.html
@@ -2,17 +2,6 @@
 <html  xmlns="http://www.w3.org/1999/xhtml"  xml:lang="en"  lang="en">
 <head>
 <title> 你是我的人 </title>
-<script language=javascript >
-var text=document.title
-var timerID
-function newtext() {
-    clearTimeout(timerId)                  
-    document.title=text.substring(1,text.length)+text.substring(0,1)
-    text=document.title.substring(0,text.length)
-    timerId = setTimeout("newtext()", 500)
-}
-newtext();
-</script>
 <meta name="keywords" content=" ">
 <meta name="description" content="   ">
 <meta name="author" content="www.">	
@@ -22,6 +11,7 @@ newtext();
   <link rel="stylesheet" href="css/jquery.fancybox-1.3.4.css" type="text/css" media="screen">
   <link rel="stylesheet" href="css/style.css" type="text/css" media="all">
   <link href="css/prettyPhoto.css" rel="stylesheet" />
+  
   <script type="text/javascript" src="js/jquery.min.js" ></script>
   <script type="text/javascript" src="js/content_switch.js"></script>
   <script type="text/javascript" src="js/jquery.easing.1.3.js"></script>
@@ -65,90 +55,7 @@ oncut="return false;" >
         }
     </script>
     <style>
-        a.wb_sina {
-            float:left;
-            margin-top:20px;
-            margin-left:15px;
-            display:inline-block;
-            padding:4px 10px;
-            border-radius:3px;
-            background-color:#e55345;
-            background-image:-moz-linear-gradient(top,#e96249,#e03c40);
-            background-image:-ms-linear-gradient(top,#e96249,#e03c40);
-            background-image:-webkit-gradient(linear,0 0,0 100%,from(#e96249),to(#e03c40));
-            background-image:-webkit-linear-gradient(top,#e96249,#e03c40);
-            background-image:-o-linear-gradient(top,#e96249,#e03c40);
-            background-image:linear-gradient(top,#e96249,#e03c40);
-            filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#e96249',endColorstr='#e03c40',GradientType=0);
-            background-repeat:repeat-x;
-            text-shadow:0 -1px 0 rgba(0,0,0,.5);
-            border:1px solid #cf2b28;
-            color:#fff!important;
-            box-shadow:0 1px 0 rgba(255,255,255,.2) inset,0 1px 0 rgba(0,0,0,.2);
-        }
-        a.wb_sina:hover {
-            background-image:-moz-linear-gradient(top,#e03c40,#e96249);
-            background-image:-ms-linear-gradient(top,#e03c40,#e96249);
-            background-image:-webkit-gradient(linear,0 0,0 100%,from(#e03c40),to(#e96249));
-            background-image:-webkit-linear-gradient(top,#e03c40,#e96249);
-            background-image:-o-linear-gradient(top,#e03c40,#e96249);
-            background-image:linear-gradient(top,#e03c40,#e96249);
-            filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#e03c40',endColorstr='#e96249',GradientType=0);
-        }
-        a.wb_sina span {
-            display:inline-block;
-            vertical-align:-5px;
-            margin-right:7px;
-            height:20px;
-            width:24px;
-            background:url(./images/weibo.png) no-repeat;
-        }
-        a.wb_tencent {
-            float:left;
-            margin-top:20px;
-            margin-left:15px;
-            display:inline-block;
-            padding:4px 10px;
-            border-radius:3px;
-            background-color:#0e7fcc;
-            background-image:-moz-linear-gradient(top,#1288d4,#0771c1);
-            background-image:-ms-linear-gradient(top,#1288d4,#0771c1);
-            background-image:-webkit-gradient(linear,0 0,0 100%,from(#1288d4),to(#0771c1));
-            background-image:-webkit-linear-gradient(top,#1288d4,#0771c1);
-            background-image:-o-linear-gradient(top,#1288d4,#0771c1);
-            background-image:linear-gradient(top,#1288d4,#0771c1);
-            filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#1288d4',endColorstr='#0771c1',GradientType=0);
-            background-repeat:repeat-x;
-            text-shadow:0 -1px 0 rgba(0,0,0,.5);
-            border:1px solid #0D6EB8;
-            color:#fff!important;
-            box-shadow:0 1px 0 rgba(255,255,255,.2) inset,0 1px 0 rgba(0,0,0,.2);
-        }
-        a.wb_tencent:hover {
-            background-color:#0e7fcc;
-            background-image:-moz-linear-gradient(top,#0771c1,#1288d4);
-            background-image:-ms-linear-gradient(top,#0771c1,#1288d4);
-            background-image:-webkit-gradient(linear,0 0,0 100%,from(#0771c1),to(#1288d4));
-            background-image:-webkit-linear-gradient(top,#0771c1,#1288d4);
-            background-image:-o-linear-gradient(top,#0771c1,#1288d4);
-            background-image:linear-gradient(top,#0771c1,#1288d4);
-            filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#0771c1',endColorstr='#1288d4',GradientType=0);
-        }
-        a.wb_tencent span {
-            display:inline-block;
-            vertical-align:-5px;
-            margin-right:7px;
-            height:20px;
-            width:24px;
-            background:url(./images/weibo.png) no-repeat 0 -20px;
-        }
-        #abox
-        {
-            position: fixed;
-            _position: absolute;
-            right: 15px;
-            z-index: 99999999;
-        }
+        
     </style>
 </head>
 
@@ -338,7 +245,6 @@ $(window).load(function() {
 	
 })
 </script>
-
 <script type="text/javascript">//修改时光沙漏时间
     var offsetX = $("#loveHeart").width() / 2;
     var offsetY = $("#loveHeart").height() / 2 - 55;
@@ -368,6 +274,7 @@ $(window).load(function() {
 
 <!--LIVEDEMO_00 -->
 </div>
-
 </body>
+<script type="text/javascript" src="https://cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.min.js"></script>　
+
 </html>
