--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@ newtext();
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<meta http-equiv="Pragma" content="no-cache">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+	 <meta http-equiv="Cache-Control" content="max-age=7200" />
+ <meta http-equiv="Expires" content="Mon, 20 Jul 2013 23:00:00 GMT" />
 	<link rel="stylesheet" href="a/all.css" tppabs="a/all.min.css">
 	<!--<link rel="icon" href="images/logo.ico" type="image/x-ico">-->
 	<link rel="icon" href="images/logo.ico" type="image/x-icon">
